--- a/_posts/2022-03-23-INITIUM-东航空难-科普-737-800机型-黑匣子构成-过往事故原因.html
+++ b/_posts/2022-03-23-INITIUM-东航空难-科普-737-800机型-黑匣子构成-过往事故原因.html
@@ -8,8 +8,8 @@ tags: blog
 author: 资深机长陈建国
 ---
 
-<p>「数据资料来源于《精通波音737》。」</p><p>资深机长陈建国</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220323-opinion-note-boeing-737-800/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/455ebe7c3f564645a8c67af0d85c17b4.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2016年3月20日，俄罗斯顿河畔罗斯托夫机场，一台波音737-800客机的坠机现场。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2016年3月20日，俄罗斯顿河畔罗斯托夫机场，一台波音737-800客机的坠机现场。<span class="credit">摄：Maxim Shemetov/Reuters/达志影像</span></figcaption></figure><p><small>本文原发于微信公众号<a href="https://mp.weixin.qq.com/s/kFNK0wLfvO4DrJFR9rW0hg">“资深机长陈建国”</a>，端传媒获公号授权转载。本文资料来自于《精通波音737》，该书由英国飞行安全委员会主席、资深机长Chris Brady所著，《The Boeing 737 Technical Guide》，经翻译出版了简体中文版。目前，仍有不少人混淆了波音737-800及波音737MAX两种机型，需要说明的是，在东航空难中出事的机型是前者，即波音737-800。本文是针对该机型的详细说明。</small></p>
+<p>「数据资料来源于《精通波音737》。」</p><p>资深机长陈建国</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220323-opinion-note-boeing-737-800/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/2afc7a54d663437b983778cf3d167824.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2007年8月20日，日本冲绳岛，发生爆炸后乘客逃离中华航空737-800客机。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2007年8月20日，日本冲绳岛，发生爆炸后乘客逃离中华航空737-800客机。<span class="credit">摄：Shuho Watanabe/Reuters/达志影像</span></figcaption></figure><p><small>本文原发于微信公众号<a href="https://mp.weixin.qq.com/s/kFNK0wLfvO4DrJFR9rW0hg">“资深机长陈建国”</a>，端传媒获公号授权转载。本文资料来自于《精通波音737》，该书由英国飞行安全委员会主席、资深机长Chris Brady所著，《The Boeing 737 Technical Guide》，经翻译出版了简体中文版。目前，仍有不少人混淆了波音737-800及波音737MAX两种机型，需要说明的是，在东航空难中出事的机型是前者，即波音737-800。本文是针对该机型的详细说明。</small></p>
 <h2>737机型的数据</h2>
 <p>737机型是波音1958年底宣布设计的双发中短程飞机，截止到今天，波音一共制造了4代737机型，总共交付超过10000架737飞机，737的总订单也超过15000架。以下是一些数据：</p>
 <p>平均每1.5秒就有一架737飞机起飞</p>
@@ -26,7 +26,7 @@ author: 资深机长陈建国
 <p>3、第三代：737新一代（737NG）、具体型号为737-600、737-700、737-800、737-900，使用CFM公司CFM56-7型发动机</p>
 <p>4、第四代：737MAX、具体型号为737-7、737-8、737-8200、737-9、737-10，使用CFM公司LEAP-1B型发动机</p>
 <p>第一代737原始型，设计于1958年，首飞于1967年4月9日，于1988年停产，一共制造1144架左右，大部分都已经退役，个别航空公司作为货机使用。</p>
-<p>第二代737经典型，1981年开始设计，首飞于1984年2月24日，于2000年停产，一共制造了1990加左右，目前很多飞机还在飞行，主要以货机为主。</p>
+<p>第二代737经典型，1981年开始设计，首飞于1984年2月24日，于2000年停产，一共制造了1990架左右，目前很多飞机还在飞行，主要以货机为主。</p>
 <p>第三代737新一代，1993年开始启动，首飞于1997年2月9日，于2020年停产。一共制造了6779架左右，为目前主要737机型，其中737-800制造最多，一共有4989架。</p>
 <p>第四代737MAX，2011年宣布启动，首飞于2016年1月29日，目前为波音唯一在生产的737机型。</p>
 <p>737还有些小众衍生机型这里就不写了。</p>
@@ -41,9 +41,9 @@ author: 资深机长陈建国
 <p>飞行数据记录器（FDR） 位于后厨房天花板上方。在 737 的历史上有过多种型号的 FDR。他们采集的参数从 8 种到上百种，时长从 30 分钟到数百小时。多数 FDR 在发动机滑油压力出现的那一刻就开始记录。</p>
 <p>后期的数字式 FDR（晚期的-200 和经典型）使用 1/4 英寸宽，450 英尺长的磁带记录数据。最新的固态 FDR（晚期的经典型和 NG 系列）将记录的数据保存在存储芯片中。</p>
 <p>后期 737-3/4/500 的FDR 可记录 25 小时的数据。它的保护盒包括一个铝制内壳、恒温保护壳、一个不锈钢外壳和一个外层不锈钢防尘罩。这使得它在每个轴向上能承受 20000 磅的碾压力，并提供 1000G 5 毫秒的冲击保护。恒温保护壳可以保持其核心部件处于一个安全的温度。它还有一个水下定位设备，可以在水下持续发送信号至少 30 天。</p>
-<p>737NG 的 FDR 和上述描述相似，但它承受 3400g 的冲击，20000 英尺深的水压和持续 30 分钟 1100℃的高温。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220323-opinion-note-boeing-737-800/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/2afc7a54d663437b983778cf3d167824.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2007年8月20日，日本冲绳岛，发生爆炸后乘客逃离中华航空737-800客机。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2007年8月20日，日本冲绳岛，发生爆炸后乘客逃离中华航空737-800客机。<span class="credit">摄：Shuho Watanabe/Reuters/达志影像</span></figcaption></figure>
+<p>737NG 的 FDR 和上述描述相似，但它承受 3400G 的冲击，20000 英尺深的水压和持续 30 分钟 1100℃的高温。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220323-opinion-note-boeing-737-800/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/455ebe7c3f564645a8c67af0d85c17b4.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2016年3月20日，俄罗斯顿河畔罗斯托夫机场，一台波音737-800客机的坠机现场。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2016年3月20日，俄罗斯顿河畔罗斯托夫机场，一台波音737-800客机的坠机现场。<span class="credit">摄：Maxim Shemetov/Reuters/达志影像</span></figcaption></figure>
 
 <h2>737的安全性</h2>
 <p>737飞机的安全性经过60年的检验，确实属于安全性较高的机型，尤其对于737NG飞机来说，安全性还是很好的。</p>
