--- a/_posts/2022-03-23-INMEDIA-林鄭-續建設社區隔離設施-指屬-雞與雞蛋的問題.html
+++ b/_posts/2022-03-23-INMEDIA-林鄭-續建設社區隔離設施-指屬-雞與雞蛋的問題.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220323CE.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>行政長官林鄭月娥在星期一（3月21日）宣布「暫緩」全民檢測，有意見指目前興建的社區隔離設施失去用途，或可改作過渡性房屋等。她在今早被問及時，重申「冇放棄」<a href="https://bit.ly/3JrpaC8">全民檢測</a>此手段，惟須掌握時機。社區隔離設施會繼續興建，形容是「雞與雞蛋的問題」，有足夠設施才有足夠條件考慮進行全民檢測。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220323CE.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>行政長官林鄭月娥在星期一（3月21日）宣布<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%9E%97%E9%84%AD%E6%9A%AB%E7%B7%A9%E5%85%A8%E6%B0%91%E5%BC%B7%E6%AA%A2-%E6%8C%87%E4%BB%A3%E5%83%B9%E5%A4%A7%E6%95%88%E6%9E%9C%E7%B4%B0-%E6%96%BD%E5%A3%93%E8%AD%B0%E5%93%A1%E6%87%89%E3%80%8C%E5%8F%8D%E6%80%9D%E3%80%8D">「暫緩」全民強檢</a>，有意見指目前興建的社區隔離設施失去用途，或可改作過渡性房屋等。她在今早被問及時，重申<a href="https://bit.ly/3JrpaC8">「冇放棄」全民檢測</a>此手段，惟須掌握時機。社區隔離設施會繼續興建，形容是「雞與雞蛋的問題」，有足夠設施才有足夠條件考慮進行全民檢測。</p>
 <p><strong>林鄭：暫緩全民強檢對建設隔離設施冇影響</strong></p>
 <p>首先提問的《鳳凰衛視》記者問到方艙醫院（社區隔離設施）的用途將會如何。林鄭月娥重申「冇放棄」全民檢測「呢個手段」，須掌握時機，不然會「徒勞無功」。她續指專家已有共識，一般是應用於疫情爆發之初，但本港第五波疫情發展「好急好猛」，當時亦無全民檢測的能力。她指下一個應用的機會是疫情尾段，屆時將可以考慮進行全民檢測，而「暫緩」對各項設施「冇影響」，指是「雞與雞蛋的問題」。</p>
 <p><strong>不認同浪費學生教學時間</strong></p>
@@ -25,6 +25,6 @@ author: 獨媒報導
 <p>身在外地的本港居民返港安排方面，她表示公布放寬<a href="https://bit.ly/3CYN3i7">九個地區的航班限制</a>後，有意見亦憂慮沒有足夠航班，而航班熔斷機制仍然存在，她指當局正檢視情況，但今日未有新公布，重申地區熔斷及航班熔斷並無矛盾。</p>
 <p>入境人士須入住的檢疫酒店方面，林鄭月娥指約有25間酒店、約6,000個房間，稱正準備更多房間，包括將目前作為社區隔離設施的酒店，轉為入境旅客檢疫之用。</p>
 <p><strong>重申核酸檢測有必要</strong></p>
-<p>當局昨晚起重啟強制檢測公告，她指核酸檢測及快速測試同樣重要，Omicron很多屬無徵狀感染者，對有人包括醫學界的人士質疑檢測表示奇怪，在本港核酸檢測能力提升後，能主動找出更多感染者。</p>
-<p>港大醫學院院長梁卓偉估計本港將出現第六波疫情，林鄭月娥稱不希望「咁快出現」，但目前需作準備，屆時的態變能力可比今日強。</p>
+<p>當局昨晚起<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E5%8D%B3%E6%97%A5%E8%B5%B7%E9%87%8D%E5%95%9F%E5%BC%B7%E6%AA%A2-%E4%B8%89%E5%80%8B%E6%9C%88%E5%85%A7%E6%9B%BE%E7%A2%BA%E8%A8%BA%E5%8F%AF%E7%8D%B2%E8%B1%81%E5%85%8D">重啟強制檢測公告</a>，她指核酸檢測及快速測試同樣重要，Omicron 很多屬無徵狀感染者，對有人包括醫學界的人士質疑檢測表示奇怪，在本港核酸檢測能力提升後，能主動找出更多感染者。</p>
+<p>港大醫學院院長梁卓偉<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%B8%AF%E5%A4%A7%E9%86%AB%E5%AD%B8%E9%99%A2%E6%8E%A8%E7%AE%976%E6%9C%88%E7%88%86%E7%AC%AC%E5%85%AD%E6%B3%A2%E7%96%AB%E6%83%85-%E5%A4%9A220%E8%90%AC%E4%BA%BA%E6%84%9F%E6%9F%93">估計本港將出現第六波疫情</a>，林鄭月娥稱不希望「咁快出現」，但目前需作準備，屆時的態變能力可比今日強。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
