--- a/_posts/2022-03-24-INITIUM-早報-西方國家峰會抨擊俄羅斯-野蠻-烏克蘭稱摧毀俄軍大型登陸艦.html
+++ b/_posts/2022-03-24-INITIUM-早報-西方國家峰會抨擊俄羅斯-野蠻-烏克蘭稱摧毀俄軍大型登陸艦.html
@@ -10,7 +10,7 @@ author:
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220325-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/d48042c62fd04f46b9821c285cab459a.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月24日，比利时布鲁塞尔，美国总统拜登、法国总统马克龙和英国首相约翰逊交谈。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年3月24日，比利时布鲁塞尔，美国总统拜登、法国总统马克龙和英国首相约翰逊交谈。<span class="credit">摄：Brendan Smialowski/AP</span></figcaption></figure><h3>西方国家峰会抨击俄罗斯“野蛮”，增加援助乌克兰</h3>
-<p><a href="https://www.reuters.com/world/europe/invasion-milestone-ukraine-urges-solidarity-western-leaders-gather-2022-03-24/">北约、欧盟及七国集团（G7）领导人</a>周四在布鲁塞尔举行了史无前例的三方峰会。西方国家领导人抨击俄罗斯入侵乌克兰是“野蛮行径”（barbarism），承诺为乌克兰提供更多军事和人道主义援助，并将加固东欧北约成员国防御力量，以及加强对俄制裁。</p>
+<p><a href="https://www.reuters.com/world/europe/invasion-milestone-ukraine-urges-solidarity-western-leaders-gather-2022-03-24/">北约、欧盟及七国集团（G7）领导人</a>周四在布鲁塞尔史无前例密集举行了三场峰会。西方国家领导人抨击俄罗斯入侵乌克兰是“野蛮行径”（barbarism），承诺为乌克兰提供更多军事和人道主义援助，并将加固东欧北约成员国防御力量，以及加强对俄制裁。</p>
 <p>美国总统拜登表示，与俄罗斯总统普京预期相反，其入侵乌克兰令北约空前团结。<a href="https://www.reuters.com/world/russia-will-pay-west-warn-putin-trio-summits-2022-03-23/">拜登以“brute”（野蛮人、畜生）</a>不点名谴责普京，呼吁全世界关注乌克兰无辜人民生活被毁的遭遇。</p>
 <p>对于俄罗斯可能使用化学武器的担忧，<a href="https://www.cnn.com/europe/live-news/ukraine-russia-putin-news-03-24-22/h_4708efa8adf9ccf57e8f4eac0a50d810">拜登对记者表示</a>“我们会作出回应”，但未提供细节，只称“回应的性质取决于使用的性质”。英国首相约翰逊、法国总统马克龙也拒绝透露，如果俄罗斯使用化学武器，西方国家将如何具体回应。</p>
 <p>约翰逊谴责普京已“越过红线，进入野蛮状态”，又称乌克兰并非单独作战，英国将向乌克兰增加援助6000枚导弹。</p>
