--- a/_posts/2022-03-25-INMEDIA-泰達幣綁架案7疑犯由內地押回港-約30名警員墟冚押解.html
+++ b/_posts/2022-03-25-INMEDIA-泰達幣綁架案7疑犯由內地押回港-約30名警員墟冚押解.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/03253333.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>涉加密貨幣交易的罪案瀕生，去年一名加密貨幣投資者，欲售出約值400萬元的泰達幣，被帶往九龍灣一個工業單位交易，結果聲稱的買家卻是綁匪，事主遭毒打和禁錮，並要求家屬支府3,000萬元贖金。事主最終趁綁匪不留神成功逃脫。警方拘捕多名疑犯，但主腦和多名綁匪疑潛逃內地。7名人士在內地落網，今午經深圳口岸移交香港。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/03253333.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>涉加密貨幣交易的罪案瀕生，去年一名加密貨幣投資者，欲售出約值400萬元的泰達幣，被帶往九龍灣一個工業單位交易，結果聲稱的買家卻是綁匪，事主遭毒打和禁錮，並要求家屬支府3,000萬元贖金。事主最終趁綁匪不留神成功逃脫。警方拘捕多名疑犯，但主腦和多名綁匪疑潛逃內地。7名人士在內地落網，今午經深圳灣口岸移交香港。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/K2e168" title="無標題"><img src="https://live.staticflickr.com/65535/51960310840_2a7a5a447c_h.jpg" width="1600" alt="無標題" /></a><br /><em>多名警員參與押解</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/bR41E1" title="無標題"><img src="https://live.staticflickr.com/65535/51960310435_80869257c3_h.jpg" width="1600" alt="無標題" /></a><br /><em>疑犯穿上整套保護衣</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/DB17V1" title="無標題"><img src="https://live.staticflickr.com/65535/51958739812_ed243446bb_h.jpg" width="1600" alt="無標題" /></a><br /><em>疑犯從內地被押解回港</em></p>
