--- a/_posts/2022-03-26-PQ-俄烏之戰座談會-賴怡忠-獨裁寡頭政治容易高估自己-低估對手.html
+++ b/_posts/2022-03-26-PQ-俄烏之戰座談會-賴怡忠-獨裁寡頭政治容易高估自己-低估對手.html
@@ -5,7 +5,7 @@ date: 2022-03-26 06:26:18.000000000 +00:00
 link: https://pourquoi.tw/2022/03/26/taiwan-news20220326-1/
 categories: pq
 tags: blog
-author: 麥聊
+author: 楊仲庭
 ---
 
 <p>今（26）日在台灣國際會館由台灣安保協會，台灣綜合政策協進會與台灣獨立建國聯盟主辦的「<strong>看看烏克蘭 想想台灣——2022 國際地緣政治與台灣安全</strong>」座談會。第一場次為遠景基金會執行長賴怡忠，賴怡忠在本次演講中，針對俄羅斯、烏克蘭情勢提供精湛分析，並談及俄烏戰爭後，歐洲、美國、日本等國家安全策略的轉變，藉此協助我們重新思考台灣的戰略地位及發展。</p>
