Update VOCUS 2022-03-28 patch

--- a/_posts/2022-03-01-VOCUS-人性本惡-從納粹戰犯到希特勒-淺談人性黑暗面-恨意-精神分析與羅夏克墨漬測驗-紐倫堡審判以來犯罪心理研究的演變.html
+++ b/_posts/2022-03-01-VOCUS-人性本惡-從納粹戰犯到希特勒-淺談人性黑暗面-恨意-精神分析與羅夏克墨漬測驗-紐倫堡審判以來犯罪心理研究的演變.html
@@ -9,6 +9,7 @@ author: 高中生看世界
 ---
 
 <p>　　　　　　　　　　　　　　　　　　　　　　　　　　　　　撰文：廖宥甯</p>
+<img src="https://images.vocus.cc/70aa6787-b331-404a-959f-16f9f64e1df7.webp">
 <p><a href="https://www.jianshu.com/p/085d4ec8fd65">圖片來源</a></p>
 <h3><strong>圖書作者與內容簡介</strong></h3>
 <blockquote><strong>「大屠殺說到底，就是個英雄太少、受害者和加害者卻多不勝數的故事。」</strong></blockquote>
