--- a/_posts/2022-03-27-VOCUS-俄國入侵烏克蘭意外祓除了日本核武裝禁忌的封印.html
+++ b/_posts/2022-03-27-VOCUS-俄國入侵烏克蘭意外祓除了日本核武裝禁忌的封印.html
@@ -10,13 +10,14 @@ author: 謝文生
 
 <h2 class="draft-block draft--h2">【前言】</h2>
 <div class="draft-block draft--p left">1：日前接受美國之音記者「向凌」採訪，就日本前首相安倍晉三近日提出的「核共享」議題，與日本長崎大學核武廢絕研究中心副主任「鈴木達治郎」及廣島大學和平研究中心教授「友次晉介」各自對此議題發表看法，新聞聯結如下，請大家參閱不同觀點的論述：</div>
-<div class="embed-block-prerender" data-vocus="true" data-url="https://www.voacantonese.com/a/is-nuke-sharing-ever-possible-in-japan-20220314/6485860.html" data-title="安倍拋"核共享"引熱議 專家：普京與習近平為"加速師"" data-description="烏俄戰事讓國際情勢緊張，普京公開核武威脅，讓向來反對核武的日本政壇也開始想要討論"核共享"。專家認為，日本的危機感因烏俄局勢而提高，但引進核武反而可能提高被攻擊的風險。 普京與習近平加速了日本討論核武 俄羅斯舉兵侵略烏克蘭的戰爭爆發後，世界各國隨之緊張。日本作為世界上唯一曾遭受原子彈攻擊的國家，向來對擁核抱持反對態度，致力於呼籲廢除核武，但是近日也開始熱烈討論與美國合作"核共享"。 ..." data-providername="美國之音" data-backgroundimageurl="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fgdb.voanews.com%2F3E17C34F-BA5A-4736-B98C-F40B60DAA2B3_w1200_r1.jpg&width=550&sign=Fq6Ea2DXxo0NOXfrp9X9k-DiG4YGmpgKMoSrZi_8Q-A"></div>
+<img src="https://gdb.voanews.com/3E17C34F-BA5A-4736-B98C-F40B60DAA2B3_w1200_r1.jpg">
+<div><a href="https://www.voacantonese.com/a/is-nuke-sharing-ever-possible-in-japan-20220314/6485860.html">安倍拋"核共享"引熱議 專家：普京與習近平為"加速師"</a></div>
 <div class="draft-block draft--p left">2：我將該採訪所表達的觀察及看法整理成一篇文章，並於本月17日發表於『思想坦克』。為了方便長期追蹤我文章的讀者也可以閱讀到此內容，特將之刊於此處，兩文在結尾的部份，敍述的用詞略有不同，部份資訊也有更新。</div>
 <div class="draft-block draft--p left">3：本文僅5000字，讀起來負擔不大，請安心閱讀。</div>
 <h2 class="draft-block draft--h2">【安倍舞劍、志在何方？】</h2>
 <div class="draft-block draft--p left">日本前首相安倍晉三2月27日於富士電視台的節目中，在對於俄羅斯進攻烏克蘭的分析時表示，歐洲的比利時、德國等五國將美國的核武，配置在自己的國內，由各國進行管理，但在使用上則是與美國「共同運用」的「核共享」（Nuclear Sharing）作法，值得日本國內「進行討論」！</div>
 <div class="draft-block draft--p left">安倍表示，日本有著「非核三原則」的國策，而且身為世界上唯一遭受到原子彈襲擊的國家，廢除核武是日本必須要揭櫫的目標；然而在當今世界的局勢下，就現實面來說，要如何做才能保有世界安全這點，應該加以討論，而不是視為「禁忌」地迴避。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/e9f6cae2-7329-4693-9001-5e5c13f1ff33.jpg" data-width="1414" data-height="1000" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">安倍晉三（照片來源：安倍晉三臉書）</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/e9f6cae2-7329-4693-9001-5e5c13f1ff33.jpg"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">安倍晉三（照片來源：安倍晉三臉書）</figcaption></div>
 <h2 class="draft-block draft--h2"><span style="font-weight: bold; ">【非核三原則？非核五原則？】</span></h2>
 <div class="draft-block draft--p left">「核武裝」在日本向來被視為絕對禁忌、屬於「<span style="font-weight: bold; ">封印話題</span>」。「非核三原則」指的是昭和42年（1967年）12月，當時首相佐藤榮作在國會針對日本的核武裝作出「不持有、不製造、不引進（持たず、作らず、持ち込ませず）」的回答，稱為「非核三原則」。</div>
 <div class="draft-block draft--p left">2006年安倍第一次政權時的政調會長「中川昭一」當年曾針對朝鮮擁有核武一事，表達日本在「遵守非核三原則的同時，也應該就擁有核武這件事進行討論才對」。時任外務大臣的麻生太郎也表示：「政府對於維持非核三原則的立場沒有改變；但是就是否要擁有核武這件事進行檢討，得出不應擁有的結論也是一種選擇」，亦即對於『<span style="font-weight: bold; ">進行討論</span>』這件事抱持肯定的態度。</div>
@@ -29,7 +30,7 @@ author: 謝文生
 <div class="draft-block draft--p left">立憲民主黨的黨首泉健人在3月8日於東京都的街頭演講時表示，「即使擁有核武，但當對方以普通兵力向我方攻來時，能夠用核武器予以反擊嗎？當然不行。所謂核武就是即使擁有也不能用的武器，因此是無法成為『抑止的力量』」。這種對核武作為抑止力量的認知，真的是完全不知所云。</div>
 <div class="draft-block draft--p left">「非容忍派」部份，還有一位最大咖的人物：岸田文雄首相。</div>
 <div class="draft-block draft--p left">岸田首相在安倍抛出核共享議題的隔天（28日），於出席參議院的會議時表示：「平常時期，在我國的領土內配置核武，有事的狀況下，由我國的戰鬥機搭載加以運用的體制，以跟美國核共享為前提來作為我國防衛的架構的話，作為堅持非核三原則的我國的立場來說，這樣的考慮無法認同」。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/d8ad7e53-558f-4480-bd84-18467bce6a38.png" data-width="2066" data-height="1400" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">岸田文雄首相（照片來源：官方臉書2022年2月18日）</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d8ad7e53-558f-4480-bd84-18467bce6a38.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">岸田文雄首相（照片來源：官方臉書2022年2月18日）</figcaption></div>
 <div class="draft-block draft--p left">而自民黨的黨政要員在此議題出現的一開始，也是隨著岸田首相的回答作為依據來回應；例如黨幹事長代行的梶山弘志在28日回應記者時表示，「（對核共享議題）黨這邊確實沒有進行討論」；對於該主張，我們的理解是『這純粹為安倍個人的想法』」。</div>
 <div class="draft-block draft--p left">岸信夫雖然是安倍晉三的弟弟，但畢竟現職還是防衛大臣；岸田派第二把交椅的林芳正也由於是外務大臣的身份，兩人俱在3月1日的記者會中對於核共享議題表示「在政府政策的方針上，堅持非核三原則的看法沒有改變。」</div>
 <div class="draft-block draft--p left">然而，對於安倍倡議應該對核武三原則進行重新討論的「容忍派」，則包括近來與自民黨走得很近的國民民主黨及在去年眾議院選舉中，一舉躍升為全國第三大黨的「日本維新之會；意外的是，竟也包括了自民黨內大多數的派閥會長及意見領袖表態主張討論。</div>
@@ -48,7 +49,7 @@ author: 謝文生
 <div class="draft-block draft--p left">就普丁方面來說，他於舉世皆關注俄烏之間是否會有戰事爆發前的2月19日，公然進行了「戰略核武」演習，向全世界展示俄羅斯的核武打擊能力，引發世人對他想動用核武的擔心與不滿。</div>
 <div class="draft-block draft--p left">接著，俄羅斯在入侵烏克蘭後，戰事的進行並未如各方預期的迅速展開下，普丁於2月27日召見俄羅斯國防部長時，簽署了執行命令，要求『核威懾部隊』進入「特別警戒任務」，這又再一次戳中了世人的憤怒。</div>
 <div class="draft-block draft--p left">然後是3月4日發生俄軍對烏克蘭境內「歐洲最大核電廠」札波羅熱核電廠發動攻擊，引發火災的事件，再度讓國際間對普丁的核戰態度之界線感到震撼與憤怒。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/21d7b499-4a25-473d-a94f-714eaae15223.png" data-width="1724" data-height="1150" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">普丁（圖片來源：ALEXEI DRUZHININ/KREMLIN/REUTERS）</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/21d7b499-4a25-473d-a94f-714eaae15223.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">普丁（圖片來源：ALEXEI DRUZHININ/KREMLIN/REUTERS）</figcaption></div>
 <div class="draft-block draft--p left">身為世界上唯一遭受過原子彈襲擊的日本人民，雖然說非核三原則是日本的國策，但見到『同為無核國家』的烏克蘭受到俄羅斯頻頻威脅以「核武」作為攻擊的手法，而產生了『如果烏克蘭當初沒有放棄核武，俄國敢如此囂張嗎？』的聯想，也是合理的結論。而且日本近年來也是處在周遭擁有核武的中國與朝鮮的陰影之下，豈能不對自國是否該進行核武裝一事有所反思？！</div>
 <div class="draft-block draft--p left">另一方面，在這場戰爭中，台灣人民最有感的，莫過於中國趁機對台灣進行的「今天美國沒有去救烏克蘭，明天美國當然也不會來救台灣」這樣的『認知戰』宣傳攻擊。</div>
 <div class="draft-block draft--p left">而且中國這個認知戰的宣傳對象並不僅限於台灣而已，對於日本也是一樣的手法進行認知攻擊，企圖瓦解日本人民「依賴日美同盟」的信心。</div>
@@ -65,7 +66,7 @@ author: 謝文生
 <div class="draft-block draft--p left">用白話來說，他要講的是：「重點不在於日本是否擁有核武這個東西，而是在必要時，日本會與美國共同承擔使用核武作為抑止力量的意志！」當然，這樣的宣示對象，自然是隣國擁有核武的中國、朝鮮與俄羅斯。</div>
 <div class="draft-block draft--p left">也就是說，安倍此次行事的目的，其實不在「核共享」這個方式，而是在「有事之際，讓核武能進入日本領域之內」才是目標所在。</div>
 <div class="draft-block draft--p left">因此，本案若進一步有發展空間的話，大致就會是如同高市早苗所指出的：「有事之際，（核武）能否以『<span style="font-weight: bold; ">例外</span>』原則，進入日本領域；包括在這之前被禁止的美軍航艦或軍機的通行等事宜；不然的話，核抑止的力量就無法發揮其應有的機能。」</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/7b2e221d-5d1c-4cfd-a284-f7ca130b8da9.png" data-width="918" data-height="1298" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">日本防衛白書2021年（照片來源：日本防衛省官方臉書）</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/7b2e221d-5d1c-4cfd-a284-f7ca130b8da9.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">日本防衛白書2021年（照片來源：日本防衛省官方臉書）</figcaption></div>
 <div class="draft-block draft--p left">筆者在觀察本議題的進展過程中，發現到一個奇特的現象：就是3月1日到3月7日間，各政黨要人都對此議題紛紛進行『應否討論的表態』；之後在不論立場是左是右的幾個主要媒體，除了有3月10日岸田首相表達『官方不處理，民間可討論』的態度之報導外，此議題忽然就彷彿不曾存在般地消失在版面上。我不是要說此議題被媒體消音，而是彷若朝野各方似乎都有默契地不再就此事進行發言？！不論是贊成方或反對方。</div>
 <div class="draft-block draft--p left">這大概只能推論岸田首相3月10日的底線，大致也是目前各方的共識吧？！<br>就非容忍派來說，相信應該也有感受到國民間對核武議題態度的轉變，但岸田首相都提出官方不處理的底線，也就不宜再攪亂春水？！就容忍派來說，由於數十年來光是「能否討論」本身就是一大超級關難，更遑論進行實質討論；所以要推進到哪？恐怕大部份的人都還沒準備好吧？！原本要攻打的難關，才剛發動就達成了，接下來要幹麻，大概也沒個譜，所以先休兵為上？！畢竟前面提過的，『非核三原則』早已深入日本人的信念之中，若要調整，數十年來連討論都是禁忌之下，一時之間，恐怕要如何討論起，都是個問題。即便主張開放討論甚力的日本維新之會，在指出問題所在之處為「過時的昭和觀點」外，也把推動討論責任，推給自民黨，可見此議題之棘手，不是搶攻就能得分的，稍有不慎，也許就會變成「七傷拳」也未可說？！</div>
 <div class="draft-block draft--p left">但是，潘朵拉盒蓋上的封印，既已祓除，是否會揭蓋，除了日本國民要慎重考慮之外，長期以來讓日本感受到威脅、被逼得要考慮兵行險招的中國與朝鮮兩共產核武政權其實也是責任當事國！</div>
