Update VOCUS 2022-03-29 patch

--- a/_posts/2022-03-28-VOCUS-日治版-一公升的眼淚-林好-盧丙丁的愛情-歷史小說-島之曦.html
+++ b/_posts/2022-03-28-VOCUS-日治版-一公升的眼淚-林好-盧丙丁的愛情-歷史小說-島之曦.html
@@ -15,7 +15,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">那是一個能高喊愛、勇氣、希望的年代，有屬於台灣的流行音樂、電影、文化運動崛起。眾人能因一個台灣人飛行比賽得獎一同慶祝，也可以為遭壓迫的農民、勞工，起身向政府反抗。​</div>
 <div class="draft-block draft--p left">看起來一切都朝著光明前進，但是這對情侶的感情遭逢更大的挑戰。​</div>
 <div class="draft-block draft--p left">那就是盧丙丁罹患了「漢生病」，不過那時還使用污名化的名稱，叫痲瘋病。​</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/26a0b9d6-764b-486d-b6b7-1a2a6f3d7e18.png" data-width="1080" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/26a0b9d6-764b-486d-b6b7-1a2a6f3d7e18.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h3 class="draft-block draft--h3">苦命鴛鴦​</h3>
 <div class="draft-block draft--p left">林好最為人知的身分是歌手。​​</div>
 <div class="draft-block draft--p left">她的音樂養分主要來自教會，沒有受過正統的聲樂訓練，直到結婚當三個孩子的媽，她才正式出道在 Columbia 旗下當歌手，歌聲傳到日本知名聲樂家關屋敏子的耳中，兩人之後成為師徒，這才開始了林好正式的聲樂訓練。​​</div>
@@ -39,10 +39,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">社會根深蒂固的歧視，阻礙反而更大。​</div>
 <div class="draft-block draft--p left">《島之曦》透過林好、盧丙丁的愛情故事，把這個最深沉的哀傷說了出來。​</div>
 <div class="draft-block draft--p left">這次 YouTube 影片（連結放留言）的背景配樂，也放上林好的歌曲〈一個紅蛋〉、〈咱台灣〉，希望能讓大家品味到那個時代的燦爛，以及底層的哀愁～</div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/QyyYRTcdImM"></div>
-<div class="draft-block draft--p left"></div>
+<iframe class="embed-block-prerender" src="https://youtu.be/QyyYRTcdImM"></iframe>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛分享歷史、文學小知識給大家！</div>
 <div class="draft-block draft--p left">歡迎訂閱我的 Youtube 頻道「<a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">熬夜的便當</a>」以及 IG <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">pan.yutang</a> 得到更多新的歷史小故事喔！</div>
-<div class="draft-block draft--p left"></div>
