--- a/_posts/2022-03-28-VOCUS-桌遊x歷史-康考迪婭-有點-kiang-的羅馬宗教是如何煉成的.html
+++ b/_posts/2022-03-28-VOCUS-桌遊x歷史-康考迪婭-有點-kiang-的羅馬宗教是如何煉成的.html
@@ -10,27 +10,25 @@ author: Kuan
 
 <h2 class="draft-block draft--h2">康考迪婭</h2>
 <div class="draft-block draft--p left">《康考迪婭》是一款以羅馬時代為背景的策略遊戲，玩家們在廣袤的地中海地區爭奪據點、進行貿易、累積分數來獲得勝利。遊戲裡頭提到許多羅馬神祇，包括遊戲盒子上斗大的標題——康考迪婭，是羅馬的和諧女神，左手持豐裕之角，右手拿著象徵和平的橄欖枝，你能夠在遊戲版圖上看見祂的雕塑。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/996a783a-16cf-4d56-b0a8-d4c3465dabf6.jpg" data-width="3305" data-height="4687" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《康考迪婭》遊戲封面</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/996a783a-16cf-4d56-b0a8-d4c3465dabf6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《康考迪婭》遊戲封面</figcaption></div>
 <div class="draft-block draft--p left">在遊戲裡，獲得分數的手段五花八門，作者還額外設計幫助卡來告訴玩家如何得分，並且做了一件有趣的事——<span style="font-weight: bold; ">用羅馬的神祇來為得分路線取名，玩家不只是因為「規則」而得分，而是向神祇證明自己值得擁有這些分數</span>，像是戰神馬爾斯會評斷玩家四處征戰的殖民者數量、商人的保護神墨丘利注重的則是玩家生產商品夠不夠多元。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/faf90e4e-bdb2-416b-808a-94e6d8eb6183.jpg" data-width="4032" data-height="3024" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/faf90e4e-bdb2-416b-808a-94e6d8eb6183.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h2 class="draft-block draft--h2">羅馬人的宗教生活</h2>
 <div class="draft-block draft--p left">宗教是羅馬人生活的一部分，一年中，他們透過各種儀式（通常殺些動物）與慶典來取悅神，冀望獲得祂們的協助，例如戰事屢戰屢敗，他們可能會歸咎於對戰神的奉獻不夠，或是誤解神諭的後果；若戰事順利，則是因為神的垂憐。比起崇拜，他們更敬畏這些擁有無上力量的神祇。</div>
 <div class="draft-block draft--p left">就我們現代人的角度看來，古羅馬宗教的某些慶典是有點怪異，甚至令人匪夷所思的（基督教興起後，許多羅馬人也這麼覺得），比方說<span style="font-weight: bold; ">慶祝春天與豐饒的「牧神節」（Lupercalia）</span>，會有成群衣不蔽體的男人繞著羅馬城跑，手上拿著鞭子沿路鞭打路上見到的女性。這個慶典在西元五世紀被羅馬教宗哲垃旭廢除，教會將這天改為紀念聖瓦倫坦（Saint Valentine）的節日，最後，演變成今日的西洋情人節。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/accc2f44-c136-447f-b829-6bab0be10eaf.jpg" data-width="1920" data-height="1247" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Lupercalia - Camassei Andrea</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/accc2f44-c136-447f-b829-6bab0be10eaf.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Lupercalia - Camassei Andrea</figcaption></div>
 <div class="draft-block draft--p left">還有一樣東西，讓我們得以看見宗教如何滲入羅馬人的日常生活，在我們所在的當代世界中也隨處可見，即是曆法。一年中有數個月份是以羅馬神祇來命名，如一月 January 來自雅努斯 Janus，祂代表一年中的開始。</div>
 <div class="draft-block draft--p left">一週裡面，除了星期天與星期一分別代表太陽與月亮，其他日子也是由羅馬神祇來命名，只是英文將星期二到星期五替換成日耳曼神話的神祇，只留下星期六是取自羅馬的農業之神薩圖爾努斯 Saturnus。</div>
 <h2 class="draft-block draft--h2">羅馬宗教從哪裡來？</h2>
 <div class="draft-block draft--p left">事實上，羅馬宗教的歷史可能比羅馬本身還要長，根據李維所寫的羅馬史起源，當羅慕勒斯與他的雙胞胎弟弟雷慕斯來到現今羅馬附近物色新城的地點時，他們讓神決定誰能夠擔任這座城市的統治者，並以神選之人的名字作為城名，最後，羅慕勒斯（Romulus）在神諭中脫穎而出，因此有了羅馬城（Roma）。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/dca596a3-419d-4094-bd08-e21f1a7fb724.jpg" data-width="1200" data-height="773" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">羅慕勒斯與雷慕斯兄弟來自羅馬建城的故事，<br>傳說他們被一頭母狼養大，長大後他們來到現今的羅馬七丘地區，在建城地點的選擇上發生爭執，<br>最後，羅穆勒斯因為雷穆斯跨越自己建的城牆而親手殺死他。</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/dca596a3-419d-4094-bd08-e21f1a7fb724.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">羅慕勒斯與雷慕斯兄弟來自羅馬建城的故事，<br>傳說他們被一頭母狼養大，長大後他們來到現今的羅馬七丘地區，在建城地點的選擇上發生爭執，<br>最後，羅穆勒斯因為雷穆斯跨越自己建的城牆而親手殺死他。</figcaption></div>
 <div class="draft-block draft--p left">在一次對鄰近城邦的戰爭勝利後，羅慕勒斯建立了羅馬的第一座神廟，奉祀羅馬神話的主神朱庇特。不過，羅馬史家認為這些祭祀的習俗並不是無中生有，他們提到遠在羅慕勒斯兄弟之前，有一位叫<span style="font-weight: bold; ">伊凡德（Evander）</span>的希臘人，他從伯尼奔尼撒半島流亡到義大利，為義大利帶來希臘的文化、法律與宗教，例如崇拜海力克斯的大力神祭壇，所以，我們才會在許多羅馬神祇裡找到相對應的希臘神祇。</div>
 <h2 class="draft-block draft--h2">努瑪：宗教制度的奠基者</h2>
 <div class="draft-block draft--p left">不過，羅馬人認為宗教制度的主要建立者是繼羅慕勒斯之後的國王<span style="font-weight: bold; ">努瑪</span>（Numa Pompilius），他創立了稱為「司祭」（flamines）的神職人員，負責祭祀三位重要的神祇——朱庇特、馬爾斯和奎里努斯，以及維斯塔的貞女（Vestal Virgin），維斯塔是羅馬家庭與爐灶的守護神，貞女在任職期間必須守貞，且負責看管神廟裡的聖火，若聖火熄滅，貞女會受到懲罰。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/0303607f-8f78-4de0-8976-0e6cadced312.jpg" data-width="4000" data-height="6000" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">18 世紀的努瑪雕塑</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/85db2f10-de83-4fdb-96b8-370aeaaf625d.jpg" data-width="2500" data-height="1079" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">約西元前兩百年使用的羅馬錢幣，<br>背面刻著維斯塔神廟與四位維斯塔貞女。<br>© The Trustees of the British Museum</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/0303607f-8f78-4de0-8976-0e6cadced312.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">18 世紀的努瑪雕塑</figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/85db2f10-de83-4fdb-96b8-370aeaaf625d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">約西元前兩百年使用的羅馬錢幣，<br>背面刻著維斯塔神廟與四位維斯塔貞女。<br>© The Trustees of the British Museum</figcaption></div>
 <div class="draft-block draft--p left">努瑪也建立了雅努斯神廟，雅努斯的形象是頭上有兩張臉孔的神祇（奎若教授是你？），代表衝突的開始與結束，也衍生為戰爭與和平。這座神廟在承平時期是關閉的，只有戰爭時門才會打開，在羅馬戰事滿滿的歷史裡，門很少是關起來的，只有少數的統治者，像是努瑪或奧古斯都成功做到。</div>
 <div class="draft-block draft--p left">努瑪之後，羅馬宗教仍然不斷變化，新的神祇與儀式會加入，慶典也會隨著時間也改變，像一開始提到有裸男的牧神節，後來拿掉了裸露的成分。在羅慕勒斯與努瑪過世的幾世紀後，羅馬成為一個橫跨許多民族、文化、語言的巨大國家，與週邊文化的互動也影響了羅馬的宗教，像是在西元前兩世紀，希栢利女神的信仰從小亞細亞傳遍希臘，最後再到羅馬，成為帕拉丁山丘上的一座新神廟。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2">參考資料</h2>
 <ul>
   <li class="draft-block draft--li"><span style="font-style: italic; ">SPQR: A History of Ancient Rome</span>, <span style="font-style: italic; ">Mary Beard</span></li>
