--- a/_posts/2022-03-28-VOCUS-第一女記者是否愛上渣男-上-楊千鶴自傳-人生的三稜鏡.html
+++ b/_posts/2022-03-28-VOCUS-第一女記者是否愛上渣男-上-楊千鶴自傳-人生的三稜鏡.html
@@ -11,7 +11,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">台灣第一位女記者，也是日治女高校生的厲害學姊之一 — — 楊千鶴，她的自傳《人生的三稜鏡》，愛情故事豐富到讓人忍不住捶心肝。​</div>
 <div class="draft-block draft--p left">​故事圍繞楊千鶴與文藝憂鬱青年 N 先生的愛情故事（還是遇到渣男？），但細究其他人物：憂鬱青年的前任、楊千鶴的女生朋友們，便會發現這個愛情故事一點都不單純。​​</div>
 <div class="draft-block draft--p left">與其說是愛情故事，更應該說，是質疑「為什麼女性的未來只有婚姻」的故事。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/42a307ab-32bf-4a3b-a1ac-7e94d967c6be.jpg" data-width="1080" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">​</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/42a307ab-32bf-4a3b-a1ac-7e94d967c6be.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">​</figcaption></div>
 <h2 class="draft-block draft--h2">把自己放最後的母親​</h2>
 <div class="draft-block draft--p left">楊千鶴在《人生的三稜鏡》裡面，自述自己是「差點被送走」的小女兒。母親異常地堅持把楊千鶴留在身邊照顧，才得以讓楊千鶴待在母親身邊安心長大。​</div>
 <div class="draft-block draft--p left">​楊千鶴非常喜愛母親，自傳描述的是一個溫柔的傳統女性，會照顧丈夫前妻的家人、喜歡位親戚朋友縫製衣服，凡事只為他人，總是把自己擺在最後。​</div>
@@ -48,8 +48,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">兩人最親密的互動，頂多是某次在楊千鶴生日宴會上，N 先生喝了一些酒，試圖摟抱楊千鶴，但是楊千鶴拒絕了，N 先生也馬上道歉。​</div>
 <div class="draft-block draft--p left">當場兩人有些小尷尬……​</div>
 <div class="draft-block draft--p left">究竟兩人關係會怎麼發展？敬請期待下一篇。</div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/afSh2n1nDoI"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://youtu.be/afSh2n1nDoI"></iframe>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜分享文學、歷史小知識給大家！</div>
 <div class="draft-block draft--p left">歡迎訂閱我的 <a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">Youtube 頻道「熬夜的便當」</a>以及 <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">IG pan.yutang</a> 得到更多新的歷史小故事喔！</div>
