--- a/_posts/2022-03-28-VOCUS-青年節與黃花崗精神-論我國青年如何報效國家與服從領袖指導以達成復興中華大業之我見.html
+++ b/_posts/2022-03-28-VOCUS-青年節與黃花崗精神-論我國青年如何報效國家與服從領袖指導以達成復興中華大業之我見.html
@@ -8,4 +8,35 @@ tags: blog
 author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
-<p><br></p>
+<h3>「事功者一時之榮，志節者萬世之業。」</h3>
+<img src="https://images.vocus.cc/9b5fc206-b856-419c-b2c4-c5562e6b2caa.jpg">
+<p>回顧那百餘寒暑之前，西元1911年的4月27日，也就是清朝宣統三年，陰曆辛亥年三月二十九日，在我革命黨人，「同盟會」成員趙聲於香港擔任行動總指揮、黃興以副指揮官的身分親自帶隊下，多達八百位的愛國志士們，有留學生跟華僑，抱持著「為國為民」，「犧牲小我、完成大我」的必死決心，於我國廣東省廣州市的兩廣總督衙門、巡警教練所等重要機關前，發起了遍地開花，攻佔指揮所與軍火庫的武裝革命行動，更希望藉著生擒兩廣總督張鳴岐的激進方式，推翻滿清、恢復中華，一舉吹響自由、共和的號角！</p>
+<p>當日下午五時三十分，黃興一隊在胳膊上纏繞白布，更統一在穿著黑面膠鞋，完成敵我辨識的作業之後，正式點燃了起義的第一槍！在黃興、林時塽等領導下，不懂事的暴民們…</p>
+<blockquote>（老師：反抗獨裁者怎麼會是「暴民」？下課之後直接找白國峰教官報到！）</blockquote>
+<p>（老師的修正）「年輕有為的革命先烈」，很快就用炸彈跟手槍突破了衙門的守軍防線，一時之間，成功佔領了官府，更振奮了全體青年的士氣！然而，隨著張鳴岐翻牆逃逸，水師提督李準重兵壓制的三路圍捕，加上大批清軍的入城支援，缺乏後續槍彈與物資予以接應協助的黃興等人，隨即陷入了困獸之鬥！</p>
+<p>即便吾等英武之輩擁有高昂不屈的鬥志，日落之後也與清軍展開了激烈的肉搏巷戰，可是在夜色昏暗下，同志與敵方的嚴重誤判，以及守更人的引路迷走，清朝援軍以絕對優勢之武力與人力，一步步將所有革命志士逼到了死亡的絕境…</p>
+<p>拋頭顱、灑熱血的誓言彷若依稀迴盪在耳邊，但喻培倫、林覺民跟方聲洞等烈士已慷慨赴義。最後，在九死一生的危急當中，右手已失去兩指的黃興，總算平安逃出重圍，負傷逃至廣州城外，並輾轉護送到香港療傷；而由趙聲和胡漢民所率領的部分同盟會援軍雖然也馬上趕赴穗城助陣，但因清軍宣布全城戒嚴，只出不進，又四處追捕逃竄的黨羽…</p>
+<blockquote>（老師：「黨羽」也，經查《教育部重編國語辭典修訂本》解釋，為同黨附和的人，更多指附從為惡的人。你引用不當，罰寫《三民主義》民族主義第一講一次。）</blockquote>
+<p>（老師的修正）「又四處追捕逃竄的志士們」，眾人只得黯然的分批撤退。非常遺憾且扼腕的，辛亥年三月二十九日的廣州起義儼然大勢已去，苟延殘喘的腐敗清廷，依然未見明日的喪鐘響起…</p>
+<img src="https://images.vocus.cc/16031b78-1db1-4cc0-ab00-2fb5d1bc7d54.jpg">
+<p>天理難容的清廷惡徒，當時為了警告革命黨人，亦求殺雞儆猴之效，更將壯烈成仁的革命黨人大體一一曝屍街坊，三日之後，才允諾在地善心人士出面善後。經過同盟會成員，也是書畫家潘達微熱心的奔走協助與找尋，同時有善堂仕紳的成全，好不容易，終於整理到了其中72位命喪街頭之青年志士的遺骸。為了不讓英雄們死而有憾，更彰顯青年愛國、愛家之武勇，因此將他們全數埋葬於廣州紅花崗外。</p>
+<p>辛亥革命，迎來天光，驅除韃虜、復我中華，待中華民國建國之後，紅花崗，原本只是黃土一抔的荒涼墓地，經由方聲濤（方聲洞之兄）的募款跟重新修建，改名為「黃花崗七十二烈士墓」…</p>
+<img src="https://images.vocus.cc/38247647-7d00-4b1a-944c-50526172bffb.jpg">
+<p>而讚譽「黃花崗起義」猶如「驚天地，泣鬼神」一般的（空一格）國父（空一格）中山先生，更親自在墓旁種植了青松，以感念這群年輕朋友們，為理想、為信念而奮鬥，更不惜犧牲應當大有可為的青春年華。</p>
+<p>民國21年時，經由倖存者詳細的考證，查考在七十二烈士之外，尚有十四名革命先烈亡於廣州起義，故總共有86位烈士的遺骸埋於其中，因此後來也有著黃花崗八十六烈士的稱呼；民國32年3月29日，隨著中國國民黨「三民主義青年團」第一次全國代表大會的召開，（空一格）蔣公跟與會先進們一致認為黃花崗烈士的英勇事蹟遠勝「五四運動」，尤以青年們愛國之心，奮鬥之舉，更值得所有後代中國青年們效法，因此決定將此日選定為中華民國的青年節；</p>
+<p>五年之後，（空一格）蔣公宣布此日亦為「革命先烈紀念日」，而中華民國的春殤也就此定在3月29日這一天。</p>
+<img src="https://images.vocus.cc/b30b2dee-8e1a-46e7-884d-9aaa3945e4ba.jpg">
+<p>《周易》有云：「天行健，君子以自強不息。地勢坤，君子以厚德載物。」</p>
+<p>夫君子者，乃頂天立地的人物，不因困難而卻步，不因權勢而畏懼。君子更應厚美德，容載萬物，發憤圖強。作為當代有為青年，自束髮、習字以來，即無時不以炎黃子孫、華夏兒女自居，跨入科技時代，嶄新的歷史風貌更賦予了吾人不可懈怠的責任，那就是務要自立自強，立志成才，為中華民族的偉大復興不斷奮鬥著。</p>
+<p>報效國家，首先必須掃除阻擋三民主義之障礙，更求建設一民主憲政之國家，自由復興之基地為目標，也要持續對獨裁邪惡之政權展開全面性的政治作戰，吾等復國大業方期日新月盛，精實壯大，更絕不可因一時之頓挫而懷憂喪志！</p>
+<p>孟子曰：「天將降大任於斯人也，必先苦其心志，勞其筋骨，餓其體膚，空乏其身行，行拂亂其所為，所以動心忍性，曾益其所不能。」，自立自強，經歷風雨飄搖才能遇見彩虹。如果沒有逆境的磨練，吾人不會有所成長。</p>
+<p>古人先賢的著述中，同樣留下了許多自強不息的實例。如漢司馬遷《報任安書》有云：古者富貴而名摩滅，不可勝記，唯倜儻非常之人稱焉。蓋文王拘而演《周易》；仲尼厄而作《春秋》；屈原放逐，乃賦《離騷》；左丘失明，厥有《國語》；孫子臏腳，《兵法》修列；不韋遷蜀，世傳《呂覽》；韓非囚秦，《說難》、《孤憤》。《詩》三百篇，大底聖賢發憤之所為作也。</p>
+<p>時代孕育我們，國家栽培我們，人民需要我們，變化萬千的競爭底下，吾人必須隨時做好準備，蓄勢待發、自立自強，克服百千難關，成功成材，「不要問你的國家能為你做什麼？而要問你能為國家做什麼？」，青年節與黃花崗精神：論我國青年如何報效國家與服從領袖指導以達成復興中華大業之我見，</p>
+<p>所有的青年朋友們，不可忘卻國民革命之責任，不可懈怠復興國家之偉業！矢勤矢勇，毋怠毋忽。</p>
+<p>有志者當報效國家；有能者將服務國家；有心者將永遠忠於國家！</p>
+<p>中華民國萬歲！中華民國萬歲！中華民國萬歲！</p>
+<img src="https://images.vocus.cc/22abb715-2819-489c-b6f3-693391972112.jpg">
+<p>圖文來源、一併致謝：</p>
+<p><a href="https://en.wikipedia.org/wiki/Second_Guangzhou_Uprising">https://en.wikipedia.org/wiki/Second_Guangzhou_Uprising</a></p>
+<p><a href="http://city.udn.com/63078/4941503">http://city.udn.com/63078/4941503</a></p>
+<p><a href="https://lihkg.com/thread/2417593/page/1">https://lihkg.com/thread/2417593/page/1</a></p>
