--- a/_posts/2022-03-29-INMEDIA-社工吳衛東批評政府侵權-無家者唔應該隨便受欺凌.html
+++ b/_posts/2022-03-29-INMEDIA-社工吳衛東批評政府侵權-無家者唔應該隨便受欺凌.html
@@ -8,12 +8,12 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/03292222_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>無家者第三次入稟小額錢債審裁處，案件要進入審訊卻是首次，2012年及2015年兩次事件，政府都願意和解，賠償1,600元至8,800元不等。見證三次入稟的香港社區組織協會幹事吳衛東批評，政府對無家者不友善，今次更派遣防暴警驅趕手無寸鐵的無家者，他認為案件證明政府行為侵權「無家者唔應該隨便受欺凌」。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/03292222_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>無家者第三次入稟小額錢債審裁處，案件要進入審訊卻是首次，2012年及2015年兩次事件，政府都願意和解，賠償1,600元至8,800元不等。見證三次入稟的香港社區組織協會幹事吳衛東批評，政府對無家者不友善，今次更派遣防暴警驅趕手無寸鐵的無家者，他認為案件證明政府行為侵權及「無家者唔應該隨便受欺凌」。</p>
 <p>翻查資料，2012年食環署聯同民政署在通州街公園清場，約40名無家者的家當被丟棄，案件在小額錢債審裁處提堂數次後，署方願以2,000元和解。2015年同類型事件再次發生，食環署在油麻地澄平街行人隧道，清走約20名無家者的家當，案件一年後庭外和解，多名無家者獲政府賠償1,610至8,820元。</p>
 <p><strong>申索人趙金興今月離世 生前掛念案件</strong></p>
 <p>前兩次案件都獲得和解，今次案件進入審訊，拖延超過兩年，14名無家者當中陸續有人離世及失去聯絡。吳衛東表示馬月榮於去年10月離世，而趙金興則因感染新冠肺炎，在今月6日離世，14名申訴人只餘下8人，當中2人目前正留醫，未能到場見證。</p>
 <p>吳衛東表示，去世的趙金興一直關注案件，以往亦有出席審訊，嘗試在法庭上彰顯公義，深信對方「會掛念呢個案件」。裁決結果對眾人來說是「遲來嘅公義」，亦證明政府無權將無家者的物品當成垃圾丟棄。</p>
-<p>吳批評政府對無家者不友善，警務處及康文署更「針對露宿者進行侵權行為」，派遣一隊防暴警察，到場驅趕手無寸鐵的無家者。事後律政司更代表警方及康文署，向無家者追討$26,879訟費，行為明顯是對弱勢社群的打擊，令欲追討政府的市民卻步，他希望今次案件，向社會釋出訊息：「無家者唔應該隨便受欺凌」。</p>
+<p>吳批評政府對無家者不友善，警務處及康文署更「針對露宿者進行侵權行為」，派遣一隊防暴警察，到場驅趕手無寸鐵的無家者。事後律政司更代表警方及康文署，向無家者追討$26,879訟費，行為明顯是對弱勢社群的打擊，令欲追討政府的市民卻步，他希望今次案件，向社會釋出訊息：「無家者唔應該隨便受欺凌。」</p>
 <p>他希望政府設立「無家者友善政策」，即使同若事件再發生，都有部門為無家者主持公道，不需要再由無家者訴諸法庭。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/jQ8q54" title="無標題"><img src="https://live.staticflickr.com/65535/51968377016_c099391f33_h.jpg" width="1600" alt="無標題" /></a></p>
 </div></div></div>
