--- a/_posts/2022-03-29-INMEDIA-俄羅斯-將大減在烏克蘭基輔及切爾尼戈夫的軍事行動.html
+++ b/_posts/2022-03-29-INMEDIA-俄羅斯-將大減在烏克蘭基輔及切爾尼戈夫的軍事行動.html
@@ -12,12 +12,12 @@ author: 獨媒報導
 <p><strong>車路士班主阿布拉莫域及烏克蘭談判代表 參與俄烏和談後中毒</strong></p>
 <p>車路士班主、俄羅斯富商阿布拉莫域(Roman Abramovich) 及兩名烏克蘭談判團代表懷疑在本月初參加一場俄烏和談後中毒。</p>
 <p>根據調查新聞組織Bellingcat透露，三人於本月3至4日在烏克蘭首都基輔參與俄烏停火談判數小時後出現中毒症狀，包括皮膚發炎、手部皮膚剝落及眼睛持續腫痛。三人其後已飛到土耳其治療，現已康復及情況穩定。據悉三人在會上只食了朱古力及飲水，會中第四人同樣有進食但就未有中毒反應。</p>
-<p>Bellingcat <a href="https://twitter.com/bellingcat/status/1508463513013997580">報道指</a>，專家分析談判團中毒的反應為「不明化學武器造成」(poisoning with an undefined chemical weapon)，但所使用的份量並不足以致死。有知情人士將事件歸咎於俄羅斯強硬派，斥其為了破壞和談而下毒(wanted to sabotage talks to end the war)。</p>
-<p>其中一名中毒的烏克蘭議員Rustem Umerov其後在Facebook發文指自己並無大礙，呼籲公眾不要聽取「未經證實的消息」( unverified information)。阿布拉莫域今日（29日）亦有現身於俄羅斯與烏克蘭在伊斯坦堡的新一場和談。</p>
-<p>阿布拉莫域月初曾因「與俄羅斯總統普京緊密的關係」(clear connections)被英國政府制裁。但有指烏克蘭總統澤連斯基就要求美國政府暫緩對阿布拉莫域的制裁，稱他能在和談中擔當一定程度的角色。</p>
+<p>Bellingcat <a href="https://twitter.com/bellingcat/status/1508463513013997580">報道指</a>，專家分析談判團中毒的反應為「不明化學武器造成」（poisoning with an undefined chemical weapon），但所使用的份量並不足以致死。有知情人士將事件歸咎於俄羅斯強硬派，斥其為了破壞和談而下毒（wanted to sabotage talks to end the war）。</p>
+<p>其中一名中毒的烏克蘭議員Rustem Umerov其後在Facebook發文指自己並無大礙，呼籲公眾不要聽取「未經證實的消息」（unverified information）。阿布拉莫域今日（29日）亦有現身於俄羅斯與烏克蘭在伊斯坦堡的新一場和談。</p>
+<p>阿布拉莫域月初曾因「與俄羅斯總統普京緊密的關係」（clear connections）被英國政府制裁。但有指烏克蘭總統澤連斯基就要求美國政府暫緩對阿布拉莫域的制裁，稱他能在和談中擔當一定程度的角色。</p>
 <p><strong>俄羅斯入侵烏克蘭事件最新簡要</strong></p>
-<p>＊烏克蘭代表團透露今日（29日）於和談中，烏克蘭宣布「中立地位」，以換取安全保障(proposed adopting neutral status in exchange for security guarantees)。中立身份意味烏克蘭將不能加入軍事同盟。</p>
+<p>＊烏克蘭代表團透露今日（29日）於和談中，烏克蘭宣布「中立地位」，以換取安全保障（proposed adopting neutral status in exchange for security guarantees）。中立身份意味烏克蘭將不能加入軍事同盟。</p>
 <p>＊戰爭以來，有多於60間烏克蘭教會及宗教場所被炸毁，亦有多達733間教育機構被俄軍破壞。</p>
 <p>＊已知有144名烏克蘭兒童在戰爭中逝世，多於200名小童受傷。</p>
-<p>＊俄羅斯獨立報章《新報》(Novaya Gazeta)於週一表示，《新報》將暫停出版，直至俄烏戰爭結束。該報的編輯Dmitry Muratov為早前決定將獎牌拍賣以援助烏克蘭難民的諾貝爾和平獎得主。《新報》近日被俄羅斯當局第二次警告，指《新報》未能正確標明被當局視為外國代理人的組織(failure to identify a “foreign agent” in an unspecified publication)。</p>
+<p>＊俄羅斯獨立報章《新報》（Novaya Gazeta）於週一表示，《新報》將暫停出版，直至俄烏戰爭結束。該報的編輯Dmitry Muratov為早前決定將獎牌拍賣以援助烏克蘭難民的諾貝爾和平獎得主。《新報》近日被俄羅斯當局第二次警告，指《新報》未能正確標明被當局視為外國代理人的組織（failure to identify a “foreign agent” in an unspecified publication）。</p>
 </div></div></div>
